--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -57,3 +57,4 @@ keybind = ["rooibos-keybind"]
 spinner = ["rooibos-components/spinner"]
 derive-commands = ["rooibos-keybind?/derive-commands"]
 effects = ["rooibos-reactive/effects"]
+palette = ["ratatui/palette"]
