--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -10,7 +10,7 @@ rooibos-reactive = { path = "../rooibos-reactive" }
 rooibos-runtime = { path = "../rooibos-runtime", optional = true }
 modalkit = { git = "https://github.com/aschey/modalkit", rev = "471b8a1bb66aed66673274083c0e55c275e788b7" }
 modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "471b8a1bb66aed66673274083c0e55c275e788b7" }
-terminput = "0.3"
+terminput = "=0.3.0"
 crossterm = "0.28"
 ratatui = { version = "0.29", features = ["unstable"] }
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
