--- a/crates/rooibos-tester/Cargo.toml
+++ b/crates/rooibos-tester/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ratatui = "0.29"
-rooibos-runtime = { path = "../rooibos-runtime", optional = true }
-rooibos-terminal = { path = "../rooibos-terminal" }
-tokio = { version = "1.43.0", default-features = false, features = ["time"] }
-rooibos-dom = { path = "../rooibos-dom" }
-rooibos-reactive = { path = "../rooibos-reactive" }
-unicode-width = "0.2.0"
+ratatui = { workspace = true }
+rooibos-runtime = { workspace = true, optional = true }
+rooibos-terminal = { workspace = true }
+tokio = { workspace = true, default-features = false, features = ["time"] }
+rooibos-dom = { workspace = true }
+rooibos-reactive = { workspace = true }
+unicode-width = { workspace = true }
 
 [features]
 default = ["runtime"]
