--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -4,31 +4,31 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-next_tuple = "0.1.0"
-either_of = "0.1.5"
-tui-textarea = { version = "0.7", default-features = false, optional = true }
-crossterm = { version = "0.28.1", optional = true }
+next_tuple = { workspace = true }
+either_of = { workspace = true }
+tui-textarea = { workspace = true, default-features = false, optional = true }
+crossterm = { workspace = true, optional = true }
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path = "../rooibos-reactive" }
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
   "all",
 ] }
-educe = "0.6"
-ratatui = { version = "0.29", default-features = false }
-tokio = { version = "1", default-features = false, features = ["sync"] }
-tracing = "0.1"
-ratatui-image = { version = "4", optional = true }
-image = { version = "0.25", optional = true }
-throbber-widgets-tui = { version = "0.8.0", optional = true }
-tokio-util = "0.7"
-futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
-getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
-derive_more = { version = "2", features = ["deref", "deref_mut"] }
+educe = { workspace = true }
+ratatui = { workspace = true, default-features = false }
+tracing = { workspace = true }
+tokio = { workspace = true, default-features = false, features = ["sync"] }
+ratatui-image = { workspace = true, optional = true }
+image = { workspace = true, optional = true }
+throbber-widgets-tui = { workspace = true, optional = true }
+tokio-util = { workspace = true }
+futures-cancel = { workspace = true }
+getrandom = { workspace = true, features = ["wasm_js"], optional = true }
+derive_more = { workspace = true, features = ["deref", "deref_mut"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tui-term = { version = "0.2.0", optional = true }
-vt100 = { version = "0.15", optional = true }
-portable-pty = { version = "0.9", optional = true }
+tui-term = { workspace = true, optional = true }
+vt100 = { workspace = true, optional = true }
+portable-pty = { workspace = true, optional = true }
 
 [features]
 crossterm = [
