--- a/crates/rooibos-keybind-macros/Cargo.toml
+++ b/crates/rooibos-keybind-macros/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 proc-macro = true
 
 [dependencies]
-manyhow = "0.11"
-proc-macro2 = "1"
-quote = "1"
-syn = { version = "2", features = ["full"] }
+manyhow = { workspace = true }
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true, features = ["full"] }
