--- a/crates/rooibos-router-macros/Cargo.toml
+++ b/crates/rooibos-router-macros/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2024"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1"
-quote = "1"
-syn = { version = "2", features = ["full"] }
-proc-macro-crate = "3"
-manyhow = "0.11"
-convert_case = "0.7"
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true, features = ["full"] }
+proc-macro-crate = { workspace = true }
+manyhow = { workspace = true }
+convert_case = { workspace = true }
