--- a/crates/rooibos-ssh/Cargo.toml
+++ b/crates/rooibos-ssh/Cargo.toml
@@ -4,22 +4,22 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-crossterm = { version = "0.28.1" }
-russh = "0.50"
-rooibos-runtime = { path = "../rooibos-runtime" }
-rooibos-terminal = { path = "../rooibos-terminal" }
-rooibos-dom = { path = "../rooibos-dom" }
-rooibos-reactive = { path = "../rooibos-reactive" }
-tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
-ratatui = { version = "0.29", default-features = false }
-tracing = "0.1"
-tap = "1"
-futures = "0.3"
-async-signal = "0.2"
-terminput = "=0.3.0"
-futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
-background-service = { git = "https://github.com/aschey/background-service-rs", rev = "27c1c31b5d96707c835871984ede8de38b66e1ed" }
-tokio-stream = { version = "0.1.17", features = ["sync"] }
+crossterm = { workspace = true }
+russh = { workspace = true }
+rooibos-runtime = { workspace = true }
+rooibos-terminal = { workspace = true }
+rooibos-dom = { workspace = true }
+rooibos-reactive = { workspace = true }
+tokio = { workspace = true, default-features = false, features = ["sync"] }
+ratatui = { workspace = true, default-features = false }
+tracing = { workspace = true }
+tap = { workspace = true }
+futures = { workspace = true }
+async-signal = { workspace = true }
+terminput = { workspace = true }
+futures-cancel = { workspace = true }
+background-service = { workspace = true }
+tokio-stream = { workspace = true, features = ["sync"] }
 
 [features]
 clipboard = ["rooibos-runtime/clipboard"]
