--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-crossterm = "0.28.1"
-rooibos = { path = "../crates/rooibos", features = [
+crossterm = { workspace = true }
+rooibos = { workspace = true, features = [
   "ssh",
   "terminal-widget",
   "input",
@@ -18,32 +18,30 @@ rooibos = { path = "../crates/rooibos", features = [
   "derive-commands",
   "effects",
   "palette",
+  "tester",
 ] }
-tokio = { version = "1.43.0", features = ["rt", "macros"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = [
-  "registry",
-  "env-filter",
-] }
-rand = "0.8.5"
-tui-textarea = { version = "0.7" }
-tui-tree-widget = "0.23.0"
-reqwest = { version = "0.12.12", features = ["json"] }
-serde = "1.0.217"
-axum = "0.8.1"
-tokio-stream = { version = "0.1.17", features = ["sync"] }
-clap = { version = "4.5.29", features = ["derive"] }
-schematic = { version = "0.17.11" }
-futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
-taffy = "0.7.5"
-tokio-util = "0.7.13"
-tracing-appender = "0.2.3"
-shlex = "1.3.0"
-color-eyre = "0.6.3"
-ratatui = { version = "0.29", features = ["palette"] }
+tokio = { workspace = true, features = ["rt", "macros"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
+rand = { workspace = true }
+tui-textarea = { workspace = true }
+tui-tree-widget = { workspace = true }
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true }
+axum = { workspace = true }
+tokio-stream = { workspace = true, features = ["sync"] }
+clap = { workspace = true, features = ["derive"] }
+schematic = { workspace = true }
+futures-cancel = { workspace = true }
+taffy = { workspace = true }
+tokio-util = { workspace = true }
+tracing-appender = { workspace = true }
+shlex = { workspace = true }
+color-eyre = { workspace = true }
+ratatui = { workspace = true, features = ["palette"] }
 
 [dev-dependencies]
-insta = "1.42.1"
+insta = { workspace = true }
 
 [features]
 nightly = ["rooibos/nightly"]
