add viewport constraints

--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -40,3 +40,4 @@ termwiz = ["terminput/termwiz", "tui-textarea?/termwiz"]
 input = ["tui-textarea"]
 default = ["crossterm"]
 effects = ["dep:tachyonfx"]
+scrolling-regions = ["ratatui/scrolling-regions"]
