--- a/crates/rooibos-reactive/Cargo.toml
+++ b/crates/rooibos-reactive/Cargo.toml
@@ -42,3 +42,4 @@ termwiz = ["rooibos-dom/termwiz", "tui-textarea?/termwiz"]
 input = ["tui-textarea"]
 default = ["crossterm"]
 effects = ["rooibos-dom/effects"]
+scrolling-regions = ["rooibos-dom/scrolling-regions"]
