--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -26,6 +26,8 @@ unicode-width = { workspace = true }
 tachyonfx = { workspace = true, default-features = false, features = [
   "sendable",
 ], optional = true }
+itertools = { workspace = true }
+tui-theme = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt", "macros", "sync"] }
