--- a/crates/rooibos-terminal/Cargo.toml
+++ b/crates/rooibos-terminal/Cargo.toml
@@ -21,6 +21,9 @@ tracing = { workspace = true }
 termwiz = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
 tokio-stream = { workspace = true, features = ["sync"] }
+terminput-crossterm = { workspace = true, optional = true }
+terminput-termion = { workspace = true, optional = true }
+terminput-termwiz = { workspace = true, optional = true }
 
 [target.'cfg(unix)'.dependencies]
 termion = { workspace = true, optional = true }
@@ -29,7 +32,22 @@ termion = { workspace = true, optional = true }
 clipboard-win = { workspace = true, features = ["std"], optional = true }
 
 [features]
-crossterm = ["dep:crossterm", "rooibos-dom/crossterm", "ratatui/crossterm"]
-termion = ["dep:termion", "rooibos-dom/termion", "ratatui/termion"]
-termwiz = ["dep:termwiz", "rooibos-dom/termwiz", "ratatui/termwiz"]
+crossterm = [
+  "dep:crossterm",
+  "rooibos-dom/crossterm",
+  "ratatui/crossterm",
+  "terminput-crossterm",
+]
+termion = [
+  "dep:termion",
+  "rooibos-dom/termion",
+  "ratatui/termion",
+  "terminput-termion",
+]
+termwiz = [
+  "dep:termwiz",
+  "rooibos-dom/termwiz",
+  "ratatui/termwiz",
+  "terminput-termwiz",
+]
 clipboard = ["dep:base64", "clipboard-win"]
