--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,10 @@ slotmap = "1"
 bitflags = "2"
 futures = "0.3"
 rustc-hash = "2"
-terminput = "=0.3.0"
+terminput = "0.4.2"
+terminput-crossterm = "0.1.2"
+terminput-termion = "0.1.2"
+terminput-termwiz = "0.1"
 paste = "1"
 taffy = "0.7.7"
 thiserror = "2"
