--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -25,6 +25,7 @@ futures-cancel = { workspace = true }
 getrandom = { workspace = true, features = ["wasm_js"], optional = true }
 derive_more = { workspace = true, features = ["deref", "deref_mut"] }
 tui-theme = { workspace = true }
+terminput-crossterm = { workspace = true, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tui-term = { workspace = true, optional = true }
@@ -36,6 +37,7 @@ crossterm = [
   "dep:crossterm",
   "tui-textarea?/crossterm",
   "rooibos-dom/crossterm",
+  "terminput-crossterm",
 ]
 termion = ["tui-textarea?/termion", "rooibos-dom/termion"]
 termwiz = ["tui-textarea?/termwiz", "rooibos-dom/termwiz"]
