--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -43,6 +43,11 @@ tester = ["rooibos-tester"]
 runtime = ["rooibos-runtime", "rooibos-keybind?/runtime"]
 xterm-js = ["rooibos-xterm-js"]
 config = ["rooibos-config"]
+config-confique = ["rooibos-config/confique"]
+config-schematic = ["rooibos-config/schematic"]
+config-json = ["rooibos-config/json"]
+config-yaml = ["rooibos-config/yaml"]
+config-toml = ["rooibos-config/toml"]
 ssh = ["rooibos-ssh"]
 router = ["rooibos-router"]
 input-search = ["rooibos-components/input-search"]
